--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
 #heroleft .elem h1 span {
   line-height: 0.9;
   font-family: "kajiro";
-  color: #fff;
+  color: #63ff3c;
   font-weight: 100;
   font-size: 11vw;
 }
