--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 }
 
 @font-face {
+  font-family: "kajiro";
+  src: url(fonts/Kajiro/AnyConv.com__Kajiro\ Bold.woff2);
+}
+
+@font-face {
   font-family: "gilroy";
   src: url(fonts/Gilroy-Regular.woff2);
 }
