--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@
 
 @font-face {
   font-family: "kajiro";
-  src: url(fonts/Kajiro/AnyConv.com__Kajiro\ Bold.woff2);
+  src: url("fonts/Kajiro-Bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "gilroy";
-  src: url(fonts/Gilroy-Regular.woff2);
+  src: url("fonts/Gilroy-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
 }
 
 html,
