--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body {
   height: 170px;
   margin-top: 20px;
   margin-bottom: 30px;
-  background-image: url(images/locate01.png);
+  background-image: url(images/locate01.webp);
   background-size: cover;
   background-position: center;
 }
